--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Muli:400|Montserrat:400,700");
 
-@font-face {
-    font-family: Streamster;
-    src: url("../assets/Streamster.ttf") format('truetype');
-}
-
 * {
     -webkit-touch-callout: none;
     -webkit-user-drag: none;
@@ -51,11 +46,11 @@
 
 }
 #particles-js{
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    background-size: cover;
-    background-position: 50% 50%;
-    background-repeat: no-repeat;
   }
 
 @keyframes fadein {
