--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Muli:400|Montserrat:400,700");
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 
 * {
     -webkit-touch-callout: none;
@@ -8,33 +9,78 @@
 }
 
 body {
-    background: #4286f4;
-    background: linear-gradient(to top, #072960, #000000);
-    background-repeat: no-repeat;
-  }
+    background: #1d1e1f;
+}
+.copyright {
+    font-family: Montserrat, Muli, Arial, Helvetica, sans-serif;
+    text-decoration: none;
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    opacity: 0.5;
+    color: white;
+    text-shadow: 0 0 15px #000;
+    transition: opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1), text-shadow 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+}
 .copyright:hover {
     opacity: 1;
     text-shadow: 0 0 5px #000;
 }
-.centerLogo {
-    cursor: default;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    -webkit-animation: fadein 7s;
 
+.centerLogo {
+    font-family: 'Roboto', sans-serif;
+    font-size: 250%;
+    top: 25%;
+    left: 5%;
+    position: fixed;
+    color: white;
+    z-index: 2;
 }
-#particles-js{
-    position: absolute;
-    -webkit-animation: fadein 10s;
-    top: 0;
-    left: 0;
+
+.dropdown {
     width: 100%;
     height: 100%;
-  }
+    top: 0;
+    left: 0;
+    position: absolute;
+    animation: 3s dropIt ease forwards;
+    -webkit-animation: 3s dropIt ease forwards;
+    z-index: -1;
+}
 
-@keyframes fadein {
-    from { opacity: 0; }
-    to { opacity: 1; }
+
+@keyframes dropIt {
+    from, to {
+        transform: translateY(-100%);
+        filter: brightness(100%);
+        -webkit-filter: brightness(100%);
+    }
+    50% {
+        transform: translateY(0%);
+        filter: brightness(100%);
+        -webkit-filter: brightness(100%);
+    }
+    100% {
+        transform: translateY(0%);
+        filter: brightness(50%);
+        -webkit-filter: brightness(50%);
+    }
+}
+
+
+.blinker {
+    font-weight: 100;
+    color: white;
+    animation: 1s blink step-end infinite;
+    position: relative;
+  }
+  
+@keyframes blink {
+    from, to {
+        color: transparent;
+    }
+    50% {
+        color: white;
+
+    }
 }
